[KIOSK-11] 1차 데모 메인 레이아웃 완료(backgound에 나인패치 수정 전)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
-    <string name="app_name">KIOSK CAFE</string>
+    <string name="app_name"></string>
+
+    <string name="tool_bar">KIOSK CAFE</string>
 
     <!--drawer_header-->
     <string name="drawer_header_txt_01">WELCOME</string>
