--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,4 +91,14 @@
     <string name="txt_store_name">스타벅스 정자점</string>
     <string name="txt_store_address">경기도 성남시 분당구 정자일로 166,SPG센터 (정자동)</string>
     <string name="txt_store_meter">630m</string>
+
+    <string name="txt_order_catalog_name_01">Coffee</string>
+    <string name="txt_order_catalog_name_02">Set menu</string>
+    <string name="txt_order_catalog_name_03">Hamburger</string>
+    <string name="txt_order_catalog_name_04">Sandwich</string>
+
+    <!--kiosk order menu-->
+    <string name="txt_order_menu_name">Cappuccino</string>
+    <string name="txt_order_menu_price">5,000 KRW</string>
+
 </resources>
