--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">kiosk</string>
 
     <!--tool_bar_name-->
+    <string name="tool_bar_login">LOGIN</string>
     <string name="tool_bar_main">KIOSK CAFE</string>
     <string name="tool_bar_store">STORE</string>
     <string name="tool_bar_order">MOBILE ORDER</string>
@@ -18,6 +19,15 @@
     <string name="nav_item_03">Info</string>
     <string name="nav_item_04">Setting</string>
     <string name="nav_item_05">F&amp;Q</string>
+
+    <!--content_login-->
+    <string name="login_id">ID</string>
+    <string name="login_passwd">PW</string>
+    <string name="login_text_id">Write your ID</string>
+    <string name="login_text_passwd">Write your Password</string>
+    <string name="login_btn">login</string>
+    <string name="login_description_type1">*</string>
+    <string name="login_description_type2">회원가입은 해당 매장의 키오스크를 통해 진행하실 수 있습니다.</string>
 
     <!--content_main-->
     <string name="content_main_notice_title">notice</string>
